--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,10 +2,5 @@
 
 
 <div class="container" style="margin-top: 140px;">
-    <h2>Welcome to {{title}}.</h2>
-    <ul>
-        <li class="list-unstyled" *ngFor="let product of products">
-            {{product.name}}
-        </li>
-    </ul>
+    <app-shop>a</app-shop>
 </div>
